conformance/tests/httproute-request-header-modifier-backend-weights.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: request-header-modifier-backend-weights
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - backendRefs:
    - name: infra-backend-v1
      port: 8080
      weight: 10
      filters:
      - type: RequestHeaderModifier
        requestHeaderModifier:
          set:
          - name: Backend
            value: infra-backend-v1
    - name: infra-backend-v2
      port: 8080
      weight: 10
      filters:
      - type: RequestHeaderModifier
        requestHeaderModifier:
          set:
          - name: Backend
            value: infra-backend-v2
